[package]
name = "soledit"
version = "0.1.0"
authors = ["crumblingstatue <radiantstatue@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
byteorder = "1.3.4"

[dependencies.amf]
version = "0.4.0"

[dependencies.sfml]
git = "https://github.com/jeremyletang/rust-sfml.git"
default-features = false
features = ["graphics"]

[dependencies.egui-sfml]
git = "https://github.com/crumblingstatue/egui-sfml.git"
branch = "egui-autocomplete"

[dependencies.egui]
git = "https://github.com/crumblingstatue/egui.git"
branch = "autocomplete"